springboot的多数据源配置 https://www.kancloud.cn/tracy5546/dynamic-datasource/2264611 https://github.com/baomidou/dynamic-datasource https://www.iocoder.cn/Spring-Boot/datasource-pool/?yudao
多数据源的多种配置方式
https://www.iocoder.cn/Spring-Boot/dynamic-datasource/?yudao

https://www.iocoder.cn/Spring-Boot/MyBatis/?yudao

<update id="updateById" parameterType="UserDO">
        UPDATE users
        <set>
            <if test="username != null">
                , username = #{username}
            </if>
            <if test="password != null">
                , password = #{password}
            </if>
        </set>
        WHERE id = #{id}
    </update>